# rust-cli-example

./: .gitignore  Cargo.toml  README.md  config.yml  logging-config.yml
src/: config.rs  lib.rs  logmod.rs  main.rs
